--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "socket.io": "^4.7.2"
+    "interactjs": "^1.10.27",
+    "socket.io": "^4.7.2",
+    "sortablejs": "^1.15.6"
   }
 }
